Initial commit: RestAssured with TestNG

--- a/src/test/resources/configurations/config.properties
+++ b/src/test/resources/configurations/config.properties
@@ -1,2 +1,4 @@
 
-URI=http://dummy.restapiexample.com/api/v1
+EmployeeURI=http://dummy.restapiexample.com/api/v1
+WeatherURI=http://api.openweathermap.org/data/3.0
+APP_ID=b8896959f2c926765dfbaefb02c3c260
